styles.css
/***@font-face 
    font-family: 'Bellota', cursive;
    font-style: normal;
    font-weight: normal;
    src:local('Bellota'), url(https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"rel="stylesheet);
}**/

html, body {
    height: 100%
}

body {
    background-color: cornsilk;
    background-image: image("Texture 8.jpg");
    background-repeat: repeat;
    background-size: cover;

 }

.pageContainer {
    max-width: 1200px;
    margin: auto;
}

.pageHeader {
  background-color: rgb(255, 235, 196);
  height: 300px;
  text-align: center;
  font-weight: 700;
  font-family: 'Bellota'; 
  position: static;
  font-size: 7vw;
  padding-top: 55px;
}

.subHeader {
    background-color: whitesmoke (185, 73, 73);
    height: 20px;
    text-align: center;
    font-size: 25px;
    font-family: 'bellota', cursive;
    font-weight: 700;
    padding: 22px;
}

.alphabet_chunk {
    background-color:hsl(165, 69%, 49%);
    height: 5%;
    padding: 10px;
    margin: 0;
    font-size: 19px;
    text-align: center;
    font-family: 'bellota', 'cursive';
    font-style: normal;
    font-weight: 900;
}

.carousel__container {
    overflow: hidden;
    width: 90%;
    box-sizing: border-box;
    margin: auto;
}

.carousel {
    transform-style: preserve-3d;
    background-color:rgb(175, 213, 248)
}

.carousel__photo {
    opacity: 0;
    position: absolute;
    top: 0;
    width: 100%;
    padding: 1rem 0;
    margin: auto;
    z-index: 100;
    transition: transform .5s, opacity .5s, z-index .5s;
}

.carousel__poto.initial,
.carousel__photo.active {
    opacity: 1;
    position: relative;
    z-index: 900;
}

.carousel__photo.prev,
.carousel__photo.next {
    z-index: 800;
}

.carousel__photo.prev {
    transform: translate(-100%);
}

.carousel__photo.next {
    transform: translate(100%);
}

.carousel__button--prev,
.carousel__button--next {
    position: absolute;
    top: 50%;
    width: 3rem;
    height: 3rem;
    background-color: #FFF;
    transform: translateY(-50%);
    border-radius: 50%;
    cursor: pointer;
    z-index: 1001;
    border: 1px solid black;
}

.carousel__button--prev {
    left: 12px;
}

.carousel__button--next {
    right: 12px;
}

.carousel__button--prev::after,
.carousel__button--next::after {
    content: " ";
    position: absolute;
    width: 10px;
    height: 10px;
    top: 50%;
    left: 54%;
    border-right: 2px solid black;
    border-bottom: 2px solid black;
    transform: translate(-50%, -50%) rotate(135deg);
}

.carousel__button--next::after {
    left: 47%;
    transform: translate(-50%, -50%) rotate(-45deg);
}

.navBar {
    background-color:rgb(255, 145, 106);
    height: 130px;
    overflow: auto;
    align-items: flex-start;
    justify-content: space-evenly;
    flex-wrap:wrap; 
    display: flex;
    flex-direction: row;
    
}

.circleScaleBtn {
    padding: 40px 40px;
    margin-top: 15px;
    margin-bottom: 15px;
    background-color: hsl(194, 100%, 97%);
    color: hsl(249, 83%, 26%);
    position: relative;
    border-radius: 50px;
    overflow: hidden;
    z-index: 1;
    font-family: 'bellota', 'cursive';
    font-style: normal;
    font-weight: 900;
}

.circleScaleBtn span {
    z-index: 1;
    position: relative;
}

.circleScaleBtn::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    width: 140px;
    height: 140px;
    border-radius: 90%;
    transform: translate3d(-50%,-50%,0) scale3d(0,0,0);
    transition: opacity .4s cubic-bezier(.19,1,.22,1),transform .75s cubic-bezier(.19,1,.22,1);
    background-color: hsl(145, 63%, 81%);
    opacity: 0;
}

.circleScaleBtn:hover span {
    color: hsl(222, 100%, 95%);
}

.circleScaleBtn:hover::before {
    opacity: 1;
    transition-duration: .99s;
    transform: translate3d(-50%,-50%,0) scale3d(1,1,1)
}

.button {
    background-color: whitesmoke;
    height: 100px;
    width: 100px;
    margin: 20px;
        }

.gridSystem {
    background-color: rgb(218, 199, 230);
    min-height: 100%;
    overflow: auto;
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    height: 1000px;
    justify-content: space-around;
    }

.card {
    background-color: rgb(250, 242, 228);
    height: 400px;
    width: 350px;
    margin: 20px;
    font-family: 'bellota', 'cursive';
    font-size: 150px;
    font-weight: 700;
    text-align: center;
    padding-top: 180px;
    border-color: rgb(91, 155, 155) ;
    border-style: solid;
    border-width: 7px;
    border-radius: 10px;

}

